syntax = "proto3";


package fibonacci;
option go_package = "./;pb";

service Fibonacci {
  rpc GetFibSlice (FibonacciRequest) returns (FibonacciResponse) {}
}

message FibonacciRequest {
  int64 x = 1;
  int64 y = 2;
}

message FibonacciResponse {
  repeated string message = 1;
}

